--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Zane Bradley&#39;s Resume by zzggbb</title>
+    <title>Zane Bradley&#39;s Resume </title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -19,13 +19,6 @@
         <p></p>
 
         <p class="view"><a href="https://github.com/zzggbb/resume">View the Project on GitHub <small>zzggbb/resume</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/zzggbb/resume/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/zzggbb/resume/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/zzggbb/resume">View On <strong>GitHub</strong></a></li>
-        </ul>
       </header>
       <section>
         <h2>
