--- a/index.html
+++ b/index.html
@@ -23,56 +23,32 @@
       <section>
         <h2>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
-
 <hr>
-
 <p>Zane Bradley - <a href="mailto:zane@mailoo.org">zane@mailoo.org</a></p>
-
 <h2>
 <a id="goal" class="anchor" href="#goal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goal</h2>
-
 <hr>
-
 <p>My goal is to obtain a work experience as a software developer.</p>
-
 <h2>
 <a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h2>
-
 <hr>
-
 <h4>
 <a id="teacher" class="anchor" href="#teacher" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Teacher</em>
 </h4>
-
 <p>TechLab Education - 12374 Saratoga Sunnyvale Rd, Saratoga, CA 95070, 408.837.0523
 (June 8, 2014 to August 15, 2014 – Full-Time)</p>
-
 <p>At TechLab Education I taught computer programming classes over the summer to groups of kids ranging in age from 8-18 years, with class sizes ranging from 6-20 kids. I taught and prepared lesson plans for Python, Java, Web Design, Arduino and 3D Printing classes. I also taught Java and Python classes through TechLab at Ohlone College for Kids in Fremont. </p>
-
 <p>References: <a href="mailto:keshav@techlabeducation.com">keshav - owner</a> and <a href="mailto:kiyan@techlabeducation.com">kiyan - operations manager</a></p>
-
 <h4>
 <a id="tutor" class="anchor" href="#tutor" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Tutor</em>
-</h4>
-
-<p>(August 2014 - Present) I tutor students at Saratoga High School in AP Computer Science</p>
-
-<h2>
-<a id="programming-experience" class="anchor" href="#programming-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programming Experience</h2>
-
-<hr>
-
-<h4>
+</h4><p>(August 2014 - Present) I tutor students at Saratoga High School in AP Computer Science</p>
+<h2><a id="programming-experience" class="anchor" href="#programming-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programming Experience</h2>
+<hr><h4>
 <a id="languages" class="anchor" href="#languages" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Languages</em>
-</h4>
-
-<p>I am fluent in Python, Java, Javascript (plus HTML, CSS, JQuery, Markdown) and Bash. I am also semi-fluent in Haskell, Clojure, Common Lisp, Lua, and Ruby. I have experience with Linux, Windows and OSX. I use Linux for personal use.</p>
-
+</h4><p>I am fluent in Python, Java, Javascript (plus HTML, CSS, JQuery, Markdown) and Bash. I am also semi-fluent in Haskell, Clojure, Common Lisp, Lua, and Ruby. I have experience with Linux, Windows and OSX. I use Linux for personal use.</p>
 <h4>
 <a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Examples</em>
-</h4>
-
-<p>I host all my projects good enough for the public on <a href="http://github.com/zzggbb">github</a>. This page itself is hosted here!</p>
+</h4><p>I host all my projects good enough for the public on <a href="http://github.com/zzggbb">github</a>. This page itself is hosted here!</p>
 
 <p>My teaching material files for the python classes that I taught can be found <a href="https://github.com/zzggbb/work/tree/master/python/curriculum/advanced">here</a>. Includes lessons on boolean logic, data structures, list comprehensions, builtin functions, recursion, and practice problems.</p>
 
@@ -99,10 +75,6 @@
 
 <p>AP Calculus, AP Statistics, AP Physics 1, AP Physics 2, Principles of Engineering, US Gov and Econ, and English 12</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/zzggbb">zzggbb</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
