--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Zane Bradley&#39;s Resume</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/zzggbb/resume">View the Project on GitHub <small>zzggbb/resume</small></a></p>
+        <p class="view"><a href="https://github.com/zzggbb/resume">Hosted at <small>zzggbb/resume</small></a></p>
       </header>
       <section>
         <h2>
