--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h2>
 <a id="goal" class="anchor" href="#goal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goal</h2>
 <hr>
-<p>My goal is to obtain a work experience as a software developer.</p>
+<p>My goal is to obtain a work experience relating to computer science and programming.</p>
 <h2>
 <a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h2>
 <hr>
@@ -64,7 +64,7 @@
 
 <p>National Merit Commended Scholar</p>
 
-<p>Accepted to UC Santa Cruz Fall 2015, majoring in Computer Science in the Baskin School of Engineering, &amp; Oregon State University Fall 2015, majoring in Computer Science in the College of Engineering (choice undecided)</p>
+<p>Attending UC Santa Cruz Fall 2015, majoring in Computer Science in the Baskin School of Engineering, </p>
 
 <h2>
 <a id="senior-year-courses" class="anchor" href="#senior-year-courses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Senior Year Courses</h2>
