--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <p>National Merit Commended Scholar</p>
 
-<p>Attending UC Santa Cruz Fall 2015, majoring in Computer Science in the Baskin School of Engineering, </p>
+<p>Attending UC Santa Cruz Fall 2015, majoring in Computer Science in the Baskin School of Engineering</p>
 
 <h2>
 <a id="senior-year-courses" class="anchor" href="#senior-year-courses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Senior Year Courses</h2>
