--- a/bike.html
+++ b/bike.html
@@ -16,7 +16,7 @@
         <div class='qualifications'>
             <h3>QUALIFICATIONS</h3>
             <ul>
-                <li>3 Experience with repairing and modifying bikes</li>
+                <li>3 years experience with repairing and modifying bikes</li>
                 <li>10 years experience mountain biking and road biking</li>
                 <li>Punctual, dependable, honest, hardworking and quick to 
                     learn new skills
@@ -55,7 +55,7 @@
                     <li>Worked from June 8, 2014 to August 15, 2014, 
                         7 hour days, 5 days a week
                     </li>
-                    <li>taught computer programming classes to groups of kids 
+                    <li>Taught computer programming classes to groups of kids 
                         ranging in age from 8-18 years, with class sizes 
                         ranging from 6-20 kids.
                     </li>
@@ -67,7 +67,7 @@
                 <i>volunteer camp counselor</i>
                 <ul>
                     <li> Worked 5 hour days, 5 days a week</li>
-                    <li>supervised and helped run activities with kids</li>
+                    <li> Supervised and helped run activities with kids</li>
                 </ul>
             </div>
         </div>
