--- a/dev.html
+++ b/dev.html
@@ -29,7 +29,7 @@
 <h2><a id="prof-skills" class="anchor" href="#prof-skills" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Skills</h2>
 <p>
     <ul>
-        <li>Innovative problem sovler</li>
+        <li>Innovative problem solver</li>
         <li>Highly Capable of managing multiple projects simultaneously</li>
         <li>Exceptional ability to work both independently and in teams</li>
         <li>Ability to adapt quickly to changing needs</li>
