--- a/dev.html
+++ b/dev.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Zane Bradley's Resume </title>
-
+    <meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Zane Bradley's Resume</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -15,47 +13,64 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Zane Bradley&#39;s Resume</h1>
+        <h1>Zane Bradley's Resume</h1>
       </header>
       <section>
-<h2><a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
+<h2>Contact</h2>
 <p>Zane Bradley - <a href="mailto:zane@mailoo.org">zane@mailoo.org</a></p>
 <hr>
 
-<h2><a id="objective" class="anchor" href="#objective" aria-hidden="true"><span class="octicon octicon-link"></span></a>Objective</h2>
-<p>Gain experience for my future career in computer science & engineering by obtaining a part time job at a tech company utilizing my skills in programming while attending UC Santa Cruz.</p>
+<h2>Objective</h2>
+<p>To gain experience working in an environment where my skills and passions are valued and put to use</p>
 <hr>
 
-<h2><a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h2>
-<h4><a id="teacher" class="anchor" href="#teacher" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Teacher</em></h4>
-<p>TechLab Education - 12374 Saratoga Sunnyvale Rd, Saratoga, CA 95070, 408.837.0523
-(June 8, 2014 to August 15, 2014 - Full-Time)</p>
-<p>At TechLab Education I taught computer programming classes over the summer to groups of kids ranging in age from 8-18 years, with class sizes ranging from 6-20 kids. I taught and prepared lesson plans for Python, Java, Web Design, Arduino and 3D Printing classes. I also taught Java and Python classes through TechLab at Ohlone College for Kids in Fremont. </p>
-<h4>
-<a id="tutor" class="anchor" href="#tutor" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Tutor</em>
-</h4><p>(August 2014 - Present) I tutor students at Saratoga High School in AP Computer Science</p>
+<h2>Work Experience</h2>
+<h4><em>Teacher</em></h4>
+<p>TechLab Education (June 8, 2014 to August 15, 2014 - Full-Time)</p>
+<ul>
+    <li>Techlab Education is a small startup that teaches students the basics of programming, circuit design, and web design.</li>
+    <li>Taught groups of kids ranging in age from 8-18 years</li>
+    <li>Class sizes ranged from 6-20 kids.</li>
+    <li>Taught and prepared lesson plans for Python, Java, Web Design, Arduino and 3D Printing classes</li>
+</ul>
 <hr>
 
-<h2><a id="programming-experience" class="anchor" href="#programming-experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programming Experience</h2>
-<h4><a id="languages" class="anchor" href="#languages" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Languages</em></h4>
-<p>I am fluent in Python, Java, Javascript (plus HTML, CSS, JQuery, Markdown) and Bash. I am also semi-fluent in Haskell, Clojure, Common Lisp, Lua, and Ruby. I have experience with Linux, Windows and OSX. I use Linux for personal use.</p>
-<h4><a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Examples</em></h4>
-<p>I host all my projects on <a href="http://github.com/zzggbb">github</a>. This page itself is hosted here!</p>
-<p>My teaching material files for the python classes that I taught can be found <a href="https://github.com/zzggbb/work/tree/master/python/curriculum/advanced">here</a>. These include lessons on boolean logic, data structures, list comprehensions, builtin functions, recursion, and practice problems.</p>
+<h4><em>Tutor</em></h4>
+<p>(August 2014 - Present) I tutored students at Saratoga High School in AP Computer Science</p>
 <hr>
 
-<h2><a id="hobbies" class="anchor" href="#hobbies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hobbies</h2>
-<p>In my free time I enjoy programming, building, repairing, and collecting computers, woodworking, furniture and cabinet making, drawing, and listening to music.</p>
+<h2>Programming Experience</h2>
+<h4><em>Languages</em></h4>
+<ul>
+    <li>Very confident with Python, Java, Javascript, HTML, CSS, JQuery, Markdown, Bash</li>
+    <li>Some experience with Haskell, Clojure, Common Lisp, Lua, and Ruby</li> 
+</ul>
 <hr>
-<h2>
-<a id="academic-honors" class="anchor" href="#academic-honors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Academic Honors</h2>
+
+<h4><em>Examples</em></h4>
+<ul>
+    <li>My projects can be found on my <a href="http://github.com/zzggbb">github</a></li>
+    <li>Teaching material I wrote can be found <a href="https://github.com/zzggbb/work/tree/master/python/curriculum/advanced">here</a></li>
+    <li>These include lessons on boolean logic, data structures, list comprehensions, builtin functions, recursion, and practice problems.</li>
+</ul>
+<hr>
+
+<h2>Hobbies</h2>
+<ul>
+    <li>Programming personal projects</li>
+    <li>Building, repairing, and collecting computers and audio equipment</li>
+    <li>Woodworking, furniture and cabinet making</li>
+    <li>Biking and working on bikes</li>
+</ul>
+<hr>
+
+<h2>Academics</h2>
 <p>National Merit Commended Scholar</p>
-<p>Attending UC Santa Cruz Fall 2015, majoring in Computer Science/Computer Engineering in the Baskin School of Engineering</p>
-<h2>
-<hr>
+<ul>
+    <li>Attending UC Santa Cruz Fall 2015</li>
+    <li>Majoring in Computer Science/Computer Engineering in the Baskin School of Engineering</li>
+</ul>
 
-<a id="senior-year-courses" class="anchor" href="#senior-year-courses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Senior Year Courses</h2>
-<p>AP Calculus, AP Statistics, AP Physics 1, AP Physics 2, Principles of Engineering, US Gov and Econ, and English 12</p>
 </section>
 </div>
 <script src="javascripts/scale.fix.js"></script>
