updated with suggested changes

--- a/dev.html
+++ b/dev.html
@@ -15,13 +15,35 @@
       <header>
         <h1>Zane Bradley's Resume</h1>
       </header>
-      <section>
 <h2>Contact</h2>
 <p>Zane Bradley - <a href="mailto:zane@mailoo.org">zane@mailoo.org</a></p>
 <hr>
 
 <h2>Objective</h2>
-<p>To gain experience working in an environment where my skills and passions are valued and put to use</p>
+<p>To obtain a fulltime engineering internship over the summer of 2016</p>
+
+<hr>
+
+<h2>Education</h2>
+<ul>
+    <li>Graduated from Saratoga High School (2015)</li>
+    <li>Currently attending UC Santa Cruz, pursuing a degree in Computer Engineering in the Baskin School of Engineering</li>
+</ul>
+
+<hr>
+
+<h2>Programming Experience</h2>
+<h4><em>Languages</em></h4>
+<ul>
+    <li>Very confident with Python, Java, Javascript, HTML, CSS, JQuery, Markdown, Bash</li>
+    <li>Some experience with Haskell, Clojure, Common Lisp, Lua, and Ruby</li> 
+</ul>
+<h4><em>Examples</em></h4>
+<ul>
+    <li>My projects can be found on my <a href="http://github.com/zzggbb">github</a></li>
+    <li>Teaching material I wrote can be found <a href="https://github.com/zzggbb/work/tree/master/python/curriculum/advanced">here</a></li>
+    <li>These include lessons on boolean logic, data structures, list comprehensions, builtin functions, recursion, and practice problems.</li>
+</ul>
 <hr>
 
 <h2>Work Experience</h2>
@@ -33,26 +55,8 @@
     <li>Class sizes ranged from 6-20 kids.</li>
     <li>Taught and prepared lesson plans for Python, Java, Web Design, Arduino and 3D Printing classes</li>
 </ul>
-<hr>
-
 <h4><em>Tutor</em></h4>
 <p>(August 2014 - Present) I tutored students at Saratoga High School in AP Computer Science</p>
-<hr>
-
-<h2>Programming Experience</h2>
-<h4><em>Languages</em></h4>
-<ul>
-    <li>Very confident with Python, Java, Javascript, HTML, CSS, JQuery, Markdown, Bash</li>
-    <li>Some experience with Haskell, Clojure, Common Lisp, Lua, and Ruby</li> 
-</ul>
-<hr>
-
-<h4><em>Examples</em></h4>
-<ul>
-    <li>My projects can be found on my <a href="http://github.com/zzggbb">github</a></li>
-    <li>Teaching material I wrote can be found <a href="https://github.com/zzggbb/work/tree/master/python/curriculum/advanced">here</a></li>
-    <li>These include lessons on boolean logic, data structures, list comprehensions, builtin functions, recursion, and practice problems.</li>
-</ul>
 <hr>
 
 <h2>Hobbies</h2>
@@ -64,14 +68,6 @@
 </ul>
 <hr>
 
-<h2>Academics</h2>
-<p>National Merit Commended Scholar</p>
-<ul>
-    <li>Attending UC Santa Cruz Fall 2015</li>
-    <li>Majoring in Computer Science/Computer Engineering in the Baskin School of Engineering</li>
-</ul>
-
-</section>
 </div>
 <script src="javascripts/scale.fix.js"></script>
 </body>
