--- a/dev.html
+++ b/dev.html
@@ -16,7 +16,7 @@
         <h1>Zane Bradley's Resume</h1>
       </header>
 <h2>Contact</h2>
-<p>Zane Bradley - <a href="mailto:zane@mailoo.org">zane@mailoo.org</a></p>
+<p>Zane Bradley - <a href="mailto:zane@mailoo.org">zane@mailoo.org</a> - (669) 300-8534</p>
 <hr>
 
 <h2>Objective</h2>
